<resources>
    <string name="app_name">Commerzi App</string>

    <!-- ACTIONS -->
    <string name="add">Ajouter</string>
    <string name="validate">Valider</string>
    <string name="login">Se connecter</string>
    <string name="signup">S\'inscrire</string>
    <string name="update">Mettre à jour</string>
    <string name="pause">Pause</string>
    <string name="skip">Passer</string>
    <string name="delete">Supprimer</string>

    <string name="add_customer">Ajouter un client</string>
    <string name="edit_customer">Modifier un client</string>
    <string name="select_customers">Sélectionner des clients</string>
    
    <string name="add_route">Ajouter un itinéraire</string>
    <string name="edit_route">Modifier un itinéraire</string>

    <string name="edit_profile">Modifier mon profil</string>

    <string name="demarrer_route">Démarrer l\'itinéraire</string>
    <string name="restart_route">Reprendre ce parcours</string>

    <string name="prochaine_visite">Prochaine visite : </string>

    <!-- LABELS -->
    <string name="signup_label">Inscription</string>
    <string name="login_label">Connexion</string>
    <string name="customer">Client</string>
    <string name="customers">Clients</string>
    <string name="prospect">Prospect</string>
    <string name="route_name">Nom de l\'itinéraire</string>
    <string name="routes">Itinéraires</string>
    <string name="profile">Profil</string>

    <!-- EMPTY STATES -->
    <string name="no_actual_route">Aucun parcours disponible.\nLancez un itinéraire pour créer un parcours</string>
    <string name="no_planned_route">Aucun itinéraire créé.</string>
    <string name="no_customer">Aucun client créé.</string>

    <!-- FIELDS -->
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">Email</string>
    <string name="address">Adresse</string>
    <string name="city">Ville</string>
    <string name="password">Mot de passe</string>
    <string name="confirmation">Confirmation</string>
    <string name="telephone">Téléphone</string>
    <string name="company">Entreprise</string>
    <string name="description">Description</string>

    <!-- ERRORS -->
    <string name="email_error">Email incorrect</string>
    <string name="password_error">Mot de passe incorrect</string>
    <string name="login_error_message">Impossible de vous connecter, veuillez réessayer</string>
    <string name="signup_error">Impossible de créer un compte, veuillez réessayer </string>
    <string name="email_password_empty">Les champs email et mot de passe ne doivent pas être vides</string>
    <string name="credentials_error">Identifiants incorrects</string>
    <string name="empty_field_error">Tous les champs doivent être remplis</string>
    <string name="password_confirmation_error">La confirmation du mot de passe est invalide</string>
    <string name="request_creation_error">Erreur lors de la création de la requête</string>
    <string name="unexpected_error">Erreur inattendue</string>
    <string name="select_type_error">Un type doit être sélectionné</string>
    <string name="error_during_update">Erreur lors de la mise à jour</string>
    <string name="error_no_route_name">Veuillez entrer un nom d\'itinéraire</string>
    <string name="error_not_enough_customers">Merci de sélectionner au moins 2 clients/prospects</string>
    <string name="error_too_much_customers">Vous pouvez renseigner un maximum de 8 clients/prospects</string>
    <string name="actual_route_error">Erreur lors du chargement de l\'itinéraire</string>
    <string name="data_processing_error">Erreur de traitement des données</string>
    <string name="routes_fetching_error">Impossible de charger les itinéraires</string>
    <string name="customers_fetching_error">Impossible de charger les clients</string>
    <string name="update_error">Erreur lors de la mise à jour</string>
    <string name="delete_error">Erreur lors de la suppression</string>
    <string name="geojson_error">Erreur lors de la conversion en GeoJSON</string>
    <string name="session_expired">Session expirée</string>
    <string name="route_fetching_error">Erreur lors de la récupération des routes</string>

    <!-- FEEDBACK -->
    <string name="account_creation_success">Compte créé avec succès</string>
    <string name="customer_creation_success">Client créé avec succès</string>
    <string name="customer_update_success">Client mis à jour</string>
    <string name="customer_delete_success">Client supprimé avec succès</string>
    <string name="profile_update_success">Profil mis à jour</string>
    <string name="route_creation_success">Itinéraire créé avec succès</string>
    <string name="route_updated_success">Itinéraire modifié avec succès</string>
    <string name="route_delete_success">Itinéraire supprimé avec succès</string>
    <string name="actual_route_success">Itinéraire chargé avec succès</string>
    <string name="visit_updated_success">Validation effectuée avec succès</string>
    <string name="actual_routes">Parcours</string>
    <string name="message_confirmation_modification">Vous avez changé l\'adresse du client. \nLes itinéraires contenant ce client / propect seront supprimés. \nVoulez-vous vraiment continuer ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="depart">Départ</string>
    <string name="paused">Itinéraire mis en pause</string>
    <string name="proximite">Client ou Prospect à proximité</string>
    <string name="proche">Vous êtes proche de :\n</string>
    <string name="reprise">Itinéraire repris avec succes</string>

</resources>