<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".auth.LoginActivity">

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_customer"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:gravity="center"/>


        <!-- Company input -->
        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer"
            android:inputType="text"
            android:drawableStart="@drawable/ic_company"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Address input -->
        <EditText
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:drawableStart="@drawable/ic_address"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- City Input -->
        <EditText
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:drawableStart="@drawable/ic_city"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Description Input -->
        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textLongMessage"
            android:drawableStart="@drawable/ic_description"
            android:paddingStart="12dp"
            android:layout_marginBottom="32dp"/>

        <!-- Radio Group -->
        <RadioGroup
            android:id="@+id/radioGroupCustomerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <!-- Customer RadioButton -->
            <RadioButton
                android:id="@+id/radioCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"/>

            <!-- Prospect RadioButton -->
            <RadioButton
                android:id="@+id/radioProspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prospect"/>

        </RadioGroup>

        <!-- Phone Number Input -->
        <EditText
            android:id="@+id/phoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_phone"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Firstname Input -->
        <EditText
            android:id="@+id/firstnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text"
            android:drawableStart="@drawable/ic_avatar"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Lastname Input -->
        <EditText
            android:id="@+id/lastnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="text"
            android:drawableStart="@drawable/ic_avatar"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>


        <!-- Validate Button -->
        <Button
            android:id="@+id/btnCreateNewCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/validate"
            android:textColor="@android:color/white"
            android:paddingStart="12dp"
            android:layout_marginBottom="32dp"/>

    </LinearLayout>
</ScrollView>

