<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_route"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/updateRouteNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/route_name"
            android:inputType="text"
            android:drawableStart="@drawable/ic_route"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewUpdateRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_customers" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupUpdateRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnUpdateRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:paddingStart="12dp"
            android:layout_marginBottom="32dp"/>

    </LinearLayout>
</ScrollView>
