<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:gravity="center"/>

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="12dp"
        android:layout_marginBottom="16dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:paddingStart="12dp"
        android:layout_marginBottom="32dp"/>

    <!-- Validate Button -->
    <Button
        android:id="@+id/btnValidateLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/validate"
        android:textColor="@android:color/white"
        android:paddingStart="12dp"
        android:layout_marginBottom="32dp"/>

    <!-- Signup Button -->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/signup"
        android:textColor="@android:color/white" />

</LinearLayout>
